# Programowanie-w-C

./: 01_zadanie1_kalkulator.cpp  02_zadanie2_tablice.cpp  03_pracadomowa_mediana.cpp  04_zadanie3_wskazniki.cpp  05_zadanie3_tablice_wskazniki.cpp  06_zadanie4_funkcje.cpp  07_zadanie6_przetwarzanie_tekstu.cpp  08_zadanie7_kalkulator_linia_polecen.cpp  09_zadanie8_kalkulator_linia_polecen_rozszerzony.cpp  CMakeLists.txt  README.md  kalkulator linia polecen.py  mediana.py  przetwarzanie tekstu.py
