cmake_minimum_required(VERSION 4.2)

project(untitled1)

set(CMAKE_CXX_STANDARD 20)

add_executable(zadanie1_kalkulator
        "praca na zajeciach, prace domowe/01_zadanie1_kalkulator.cpp")

add_executable(zadanie2_tablice
        "praca na zajeciach, prace domowe/02_zadanie2_tablice.cpp")

add_executable(praca_domowa_mediana
        "praca na zajeciach, prace domowe/03_pracadomowa_mediana.cpp")

add_executable(zadanie3_wskazniki
        "praca na zajeciach, prace domowe/04_zadanie3_wskazniki.cpp")

add_executable(zadanie3_tablice_wskazniki
        "praca na zajeciach, prace domowe/05_zadanie3_tablice_wskazniki.cpp")

add_executable(zadanie4_funkcje
        "praca na zajeciach, prace domowe/06_zadanie4_funkcje.cpp")

add_executable(zadanie6_przetwarzanie_tekstu
        "praca na zajeciach, prace domowe/07_zadanie6_przetwarzanie_tekstu.cpp")

add_executable(zadanie7_kalkulator_linia_polecen
        "praca na zajeciach, prace domowe/08_zadanie7_kalkulator_linia_polecen.cpp")

add_executable(rozbudowany_kalkulator_linia_polecen
        "praca na zajeciach, prace domowe/09_zadanie8_kalkulator_linia_polecen_rozszerzony.cpp")